Feat. Create email service
